--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-heatclient (0.2.2-1) experimental; urgency=low
+python-heatclient (0.2.2-1) unstable; urgency=low
 
   * Initial release. (Closes: #705231)
 
