--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-heatclient (0.2.2-2) UNRELEASED; urgency=low
+
+  * Added missing dependency python-setuptools-git (Closes: #710576), thanks to
+    Jeremy Bicha for reporting.
+
+ -- Thomas Goirand <zigo@debian.org>  Sat, 01 Jun 2013 09:23:44 +0800
+
 python-heatclient (0.2.2-1) unstable; urgency=low
 
   * Initial release. (Closes: #705231)
