--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-heatclient (0.2.2-4) UNRELEASED; urgency=low
+
+  * Added export OSLO_PACKAGE_VERSION=$(VERSION) in debian/rules.
+
+ -- Thomas Goirand <zigo@debian.org>  Wed, 24 Jul 2013 16:03:22 +0800
+
 python-heatclient (0.2.2-3) unstable; urgency=low
 
   [ Prach Pongpanich ]
