--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ python-heatclient (0.2.3-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Added export OSLO_PACKAGE_VERSION=$(VERSION) in debian/rules.
+  * VCS fields now using canonical URLs.
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 24 Jul 2013 16:03:22 +0800
 
