Some more debian/changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ python-heatclient (0.2.3-1) UNRELEASED; urgency=low
   * New upstream release.
   * Added export OSLO_PACKAGE_VERSION=$(VERSION) in debian/rules.
   * VCS fields now using canonical URLs.
+  * Added build-depends: python-mimeparse (>= 0.1.4), python-testscenarios,
+    python-yaml and testrepository.
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 24 Jul 2013 16:03:22 +0800
 
