--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
 python-heatclient (0.2.3-1) unstable; urgency=low
 
+  [ Thomas Goirand ]
   * New upstream release.
   * Added export OSLO_PACKAGE_VERSION=$(VERSION) in debian/rules.
   * VCS fields now using canonical URLs.
   * Added build-depends: python-mimeparse (>= 0.1.4), python-testscenarios,
     python-yaml and testrepository.
+
+  [ Prach Pongpanich ]
   * Dropped build-depends: python-nose.
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 24 Jul 2013 16:03:22 +0800
