Update changelog for 0.2.4-1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-python-heatclient (0.2.4-1) UNRELEASED; urgency=low
+python-heatclient (0.2.4-1) unstable; urgency=low
 
-  [ Prach Pongpanich ]
   * New upstream release.
+  * Add build-depends on python-mock (>= 0.8.0) and python-pbr (>= 0.5.20).
 
  -- Prach Pongpanich <prachpub@gmail.com>  Thu, 08 Aug 2013 22:12:38 +0700
 
