Even more (build-)depends.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-python-heatclient (0.2.4-2) UNRELEASED; urgency=low
+python-heatclient (0.2.8-1) experimental; urgency=low
 
+  * New upstream release.
   * Added --testr-args='--subunit  ' when calling testr.
+  * New (build-)depends for this release.
 
  -- Thomas Goirand <zigo@debian.org>  Tue, 01 Oct 2013 14:46:19 +0800
 
