--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-heatclient (0.2.9-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Tue, 15 Apr 2014 16:13:27 +0800
+
 python-heatclient (0.2.8-1) experimental; urgency=low
 
   * New upstream release.
