--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-python-heatclient (0.2.9-1) UNRELEASED; urgency=low
+python-heatclient (0.2.9-1) unstable; urgency=medium
 
   * New upstream release.
+  * Uploading to unstable.
   * Review (build-)depends for this release.
   * Calling testr directly (without python setup.py).
 
