--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-heatclient (0.3.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+  * Fixed (build-)depends for this release.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 19 Mar 2015 01:03:37 +0100
+
 python-heatclient (0.2.9-1) unstable; urgency=medium
 
   * New upstream release.
