--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
-python-heatclient (0.4.0-1) UNRELEASED; urgency=medium
+python-heatclient (0.4.0-1) unstable; urgency=medium
 
   * New upstream release.
   * Fixed (build-)depends for this release.
+  * Added Python3 support.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 19 Mar 2015 01:03:37 +0100
 
