--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-heatclient (0.4.0-1) UNRELEASED; urgency=medium
+python-heatclient (0.4.0-1) unstable; urgency=medium
 
   * New upstream release.
   * Fixed (build-)depends for this release.
