--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-heatclient (0.6.0-1) unstable; urgency=medium
 
   * New upstream release.
+  * Fixed (build-)depends for this release.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 18 Jun 2015 17:31:23 +0200
 
