--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-heatclient (0.4.0-2) unstable; urgency=medium
+
+  * Disable tests which are failing with python-mock >= 1.3 (Closes: #795587).
+
+ -- Thomas Goirand <zigo@debian.org>  Tue, 25 Aug 2015 13:00:14 +0000
+
 python-heatclient (0.4.0-1) unstable; urgency=medium
 
   * New upstream release.
