--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ python-heatclient (0.8.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * d/control: Align (build-)depends with upstream.
+  * d/control: Update uploaders.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Wed, 23 Sep 2015 16:38:15 -0400
 
