--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-heatclient (0.8.0-1) UNRELEASED; urgency=medium
+python-heatclient (0.8.0-1) experimental; urgency=medium
 
   * New upstream release.
   * d/control: Align (build-)depends with upstream.
