--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-heatclient (0.8.0-2) unstable; urgency=medium
+
+  * Uploading to unstable.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 15 Oct 2015 21:52:21 +0000
+
 python-heatclient (0.8.0-1) experimental; urgency=medium
 
   * New upstream release.
