--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ python-heatclient (1.0.0-1) experimental; urgency=medium
   [ Thomas Goirand ]
   * New upstream release.
   * Fixed (build-)depends for this release.
+  * Standards-Version: 3.9.7 (no change).
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 21 Mar 2016 11:58:30 +0100
 
