--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-heatclient (1.1.0-1) experimental; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Sat, 02 Apr 2016 15:14:45 +0200
+
 python-heatclient (1.0.0-1) experimental; urgency=medium
 
   [ David Della Vecchia ]
